[package]
name = "internet_bandits"
version = "0.1.0"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3.46", features = ["Document", "HtmlCanvasElement"] }